kubernetes/apps/admin/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: admin
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "localOnly@file,admin-forwardauth-authelia@kubernetescrd"
spec:
  rules:
    - host: k8s.joshwolfe.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-kubernetes-dashboard-web
                port:
                  number: 8000
